fix:fixed the overflowing issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,10 @@ body{
     font-family: 'Poppins', sans-serif;
     background-color: #f4f4f4;
     overflow-x: hidden;
-    max-width: 100%;
+    max-width: 100vw;
+}
+header{
+    width: 100vw;
 }
 nav{
     background-color: #ffffff;
